testsuite/tests/rep-poly/T20363_show_co.stderr

T20363_show_co.hs:23:10: error:
    • The newtype constructor pattern
      does not have a fixed runtime representation.
      Its type is:
        ((# #) |> (TYPE
                     (Sym (Zapped nominal NilRep ZeroBitRep {} [])))_N) :: TYPE NilRep
      NB: GHC does not (yet) support rewriting in runtime representations.
      Please comment on GHC ticket #13105 if this is causing you trouble.
      <https://gitlab.haskell.org/ghc/ghc/-/issues/13105>
    • In the pattern: MkNT (##)
      In an equation for ‘test1b’: test1b (MkNT (##)) = 0
